styles/style.css
/* Add your class here */
.page {
  min-width: 1100px;
  max-width: 1600px;
  margin: 0 auto;
  font-family: "Helvetica Neue", sans-serif, Arial;
  font-size: 16px;
  line-height: 20px;
}

.header {
  height: 100vh;
  min-height: 720px;
  max-height: 800px;
  padding-top: 30px;
  padding-left: 80px;
  padding-right: 80px;
  position: relative;
  box-sizing: border-box;
}

.nav {
  /* Add flex properties here */
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  width: 196px;
  height: 60px;
}

.nav__links {
  display: flex;
  list-style: none;
  padding-left: 0;
  margin-top: 8px;
  align-items: center;
  column-gap: 20px;
}

.nav__link {
  color: #000000;
  text-decoration: none;
  font-weight: bold;
}

/* Add the hover state styles for .nav__link here */

.nav__link:hover {
  color: #1f69c9;
}
.header__title {
  font-size: 66px;
  line-height: 76px;
  font-weight: 500;
  margin: 150px 0 0;
  max-width: 544px;
}

.header__description {
  font-size: 20px;
  line-height: 30px;
  margin: 32px 0 0;
  max-width: 465px;
}

.header__image {
  /* Write styles here */
  max-width: 636px;
  z-index: 1;
  position: absolute;
  top: 135px;
  right: 20px;
}

.header__footer {
  position: absolute;
  left: 0;
  bottom: 40px;
  width: 100%;
  display: flex;
  align-items: center;
  padding: 40px 80px 0;
  justify-content: space-between;
  box-sizing: border-box;
}

.header__link {
  color: #2f80ed;
  text-decoration: none;
}

/* Add the hover state styles for .header__link here */

.header__link:hover {
  color: #1f69c9;
}

.header__address {
  margin: 0;
  color: #838383;
}

.staff {
  padding-top: 100px;
  padding-bottom: 140px;
  background-color: #f2f2f2;
}

.staff__title {
  text-align: center;
  font-size: 44px;
  line-height: 52px;
  margin: 0 0 24px;
}

.staff__subtitle {
  text-align: center;
  font-size: 20px;
  line-height: 30px;
  font-weight: 400;
  margin: 24px 0 0;
}

/* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */

.staff__cards {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 40px;
  max-width: 760px;
  align-content: center;
  margin: auto;
  margin-top: 68px;
  list-style: none;
  padding-left: 0;
}

.card {
  background-color: #fff;
  border-radius: 6px;
  padding: 32px 40px 20px 32px;
  box-sizing: border-box;
  width: 360px;
  height: 420px;
}

.card__content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.card__title {
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
  margin: 0;
}

.card__text {
  margin: 20px 0 0;
  font-size: 16px;
  line-height: 24px;
}

.card__footer {
  margin: 0;
  font-size: 14px;
  line-height: 20px;
  color: #838383;
  /* Auto margins applied on a flex item automatically extend specified margin to occupy the extra space in the flex container */
  /* In our case, this pushes the element down to the bottom */
  margin-top: auto;
}

.events {
  padding: 100px 0 120px 80px;
  display: flex;
  align-items: start;
  justify-content: space-between;
  box-sizing: border-box;
}

.events__content {
  flex-basis: 580px;
}

.events__heading {
  font-size: 20px;
  font-weight: 500;
  line-height: 30px;
  margin: 0;
}

.events__title {
  font-size: 44px;
  font-weight: 500;
  line-height: 52px;
  margin: 32px 0;
}

.events__info-section {
  margin-top: 32px;
}

.event-info__item {
  display: flex;
  align-items: center;
  margin-bottom: 4px;
  font-weight: 500;
}

.event-info__icon {
  background-repeat: no-repeat;
  background-position: center;
  margin-right: 12px;
  width: 24px;
  height: 24px;
}

.event-info__icon_type_calendar {
  background-image: url(../images/icon_calendar.svg);
}

.event-info__icon_type_pin {
  background-image: url(../images/icon_pin.svg);
  width: 24px;
  height: 24px;
}

.event-info__text {
  font-size: 20px;
  font-weight: 500;
  line-height: 30px;
  margin: 0;
}

.events__description {
  margin: 40px 0 60px;
}

.events__more {
  margin-top: 60px;
  color: #2f80ed;
  text-decoration: none;
}

/* Add the hover state styles for .events__more here */
.events__more:hover {
  color: #1f69c9;
}

.events__cover {
  flex-grow: 1;
  flex-shrink: 0;
  flex-basis: 780px;
  max-width: 780px;
  position: relative;
}

.events__image {
  max-width: 100%;
}

.person {
  position: absolute;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 10px;
}

.person_name_feynman {
  top: -30px;
  left: 319px;
}

.person_name_burbidge {
  top: 96px;
  right: 125px;
}

.person_name_cannon {
  bottom: 18px;
  right: 216px;
}

.person_name_mitchell {
  bottom: 82px;
  left: 142px;
}

.person_name_tarter {
  top: 79px;
  left: 159px;
}

.person__image {
  max-width: 100%;
}

.person__image_size_l {
  width: 140px;
}

.person__image_size_m {
  width: 100px;
}

.person__image_size_s {
  width: 80px;
}

.person__caption {
  text-align: center;
  font-size: 14px;
  margin: 0;
}

.membership {
  padding-top: 100px;
  padding-bottom: 140px;
  background-color: #f2f2f2;
}

.membership__title {
  max-width: 574px;
  margin: 0 auto;
  text-align: center;
  font-size: 44px;
  font-weight: 500;
  line-height: 52px;
}

.membership__steps {
  list-style-type: none;
  padding: 0;
  margin: 100px 0 0;
  justify-content: center;
  display: flex;
  gap: 20px;
  /* Add styles */
}

.step {
  /* Add styles */
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  width: 220px;
}

.step__title {
  margin: 0;
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
  display: flex;
  align-items: center;
}

.step__icon {
  margin-left: 20px;
}

.step__description {
  margin: 10px 0 0;
}

.about {
  padding: 100px 80px;
  background-color: #1f1f1f;
  color: #fff;
  overflow: hidden;
  position: relative;
  box-sizing: border-box;
  display: flex;
}

.about__title {
  margin: 0;
  font-size: 20px;
  line-height: 30px;
  font-weight: 500;
  z-index: 1;
  max-width: 154px;
  margin-right: 120px;
  z-index: 1;
}

.about__content {
  font-size: 20px;
  line-height: 30px;
  font-weight: 400;
  max-width: 660px;
  z-index: 1;
}

.about__paragraph {
  margin: 0;
  margin-bottom: 32px;
}

.about__paragraph:last-of-type {
  margin-bottom: 0px;
}

.about__circle {
  background-color: #2f80ed;
  width: 495px;
  height: 495px;
  border-radius: 50%;
  z-index: 0;
  position: absolute;
  top: -121px;
  left: -91px;
}

.footer {
  box-sizing: border-box;
  background: #1f1f1f;
  color: #fff;
  padding: 57px 102px 60px 80px;
}

.footer__columns {
  display: flex;
}

.footer__column_content_hours {
  margin-left: auto;
}

.footer__column_content_social {
  margin-left: 100px;
}

.footer__logo {
  width: 153px;
}

.footer__list {
  /* The code below removes the default browser styles for lists */
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.footer__list-item {
  margin-bottom: 16px;
}

.footer__list-item:last-of-type {
  margin-bottom: 0px;
}

.footer__column-heading {
  margin: 0 0 20px;
  font-size: 16px;
  line-height: 20px;
}

.footer__column-link:hover {
  color: #c1c1c1;
}

.footer__column-link {
  color: #ffff;
  font-size: 16px;
  line-height: 20px;
  text-decoration: none;
  display: flex;
  align-items: center;
}

.footer__social-icon {
  width: 16px;
  height: 16px;
  margin-right: 10px;
}

.footer__copyright {
  color: #fff;
  margin: 108px 0 0;
}

